--- a/index.html
+++ b/index.html
@@ -1,11 +1,220 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="theme-color" content="#FFB16F">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#FFB16F">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta property="og:title" content="Casamento Naama & Ana" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://naamaana.github.io/casamento" />
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:url" content="https://naamaana.github.io/casamento/photos/1-smin.jpg" />
+    <meta property="og:description" content="No dia 13.11.2021 as 16h00, você é nosso convidado!" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./plugins.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Naama & Ana</title>
 </head>
+
 <body>
+    <div class="app" :class="{'loading': loading, 'show': initialized}">
+        <div class="container" v-if="invitationOpened">
+            <!-- <div>
+                <div style="background-image: url('./photos/1-xsmin.jpg');  background-size: cover; background-position-x: center; width: calc(100% + 40px); margin-left: -20px; margin-top: -20px; height: 500px;"></div>
+                <div style="margin-top: -570px">
+                   
+                </div>
+            </div> -->
+            
+            <div class="parents-names left">
+                <span class="parent-name">Marco Antonio E. Campos</span>
+                <span class="parent-name">Rosangela de Souza R. Campos</span>
+            </div>
+            <div class="parents-names right">
+                <span class="parent-name">Elaine de Oliveira Lima</span>
+                <span class="parent-name">Elizanio Vieira Lima</span>
+            </div>
+            <p class="couple-names">Naama & Ana</p>
+            <span class="info">Convidam para seu casamento a realizar-se em</span>
+            <span class="info date"><span class="emphasis">13</span> de <span class="emphasis">Novembro</span> de <span
+                    class="emphasis">2021</span> - <span class="emphasis">16h00</span>
+            </span>
+            <div class="section-divider"></div>
+            <div class="section">
+                <i class="section-icon far fa-heart"></i>
+                <span class="section-title">Nosso Casamento</span>
+                <span class="info justify">
+                    Olá! Você é nosso convidado nesta data tão importante. É com grande prazer que viemos te convidar
+                    para celebrar este dia tão especial conosco.
+                    <div class="photo-gallery">
+                        <div class="photo" style="background-image: url('./photos/1-xsmin.jpg')" @click="photo = '1'">
+                        </div>
+                        <div class="photo" style="background-image: url('./photos/2-xsmin.jpg')" @click="photo = '2'">
+                        </div>
+                        <div class="photo" style="background-image: url('./photos/3-xsmin.jpg')" @click="photo = '3'">
+                        </div>
+                        <div class="photo" style="background-image: url('./photos/4-xsmin.jpg')" @click="photo = '4'">
+                        </div>
+                        <div class="photo" style="background-image: url('./photos/5-xsmin.jpg')" @click="photo = '5'">
+                        </div>
+                    </div>
+                    <transition name="slide-fade">
+                        <div class="photo-fullscreen" v-if="photo" @click="e => check(e)">
+                            <div class="photo"
+                                style="vertical-align: middle;justify-content: center;display: flex;align-items: center">
+                                <img :src="'./photos/' + photo + '-smin.jpg'"
+                                    style="max-height: 100%; max-width: 100%; border-radius: 10px;" />
+                            </div>
 
-<h1>It's working!</h1>
+                            <div class="close-photo-container">
+                                <div class="close-photo" @click="photo = ''">
+                                    <i class="fas fa-angle-left"></i>
+                                    Voltar
+                                </div>
+                            </div>
+                        </div>
+                    </transition>
+                    <span class="quote">"Porque dele, e por meio dele, e para ele são todas as coisas. A ele, pois, a
+                        glória eternamente. Amém!." Romanos 11:36.</span>
+                </span>
+            </div>
 
+            <div class="section-divider"></div>
+            <div class="section">
+                <i class="section-icon fas fa-map-marker-alt"></i>
+                <span class="section-title">Local</span>
+                <span class="info">Salão Dubai</span>
+                <div>
+                    <a class="act-link block-link" href="javascript:void(0)" :class="{'active': showCompleteAddress}"
+                        @click="showCompleteAddress = !showCompleteAddress">Ver o endereço completo <i
+                            class="far fa-eye"></i></a>
+                    <transition name="slide-fade">
+                        <div v-if="showCompleteAddress" class="block-link-info justify">
+                            Av. Maria Cândida Delgado, 390 - Vila Cândida, São José dos Campos - SP, 12213-513
+                        </div>
+                    </transition>
+                    <a class="act-link block-link" href="javascript:void(0)" :class="{'active': showMap}"
+                        @click="showMap = !showMap">Ver mapa <i class="fas fa-map-marked-alt"></i></a>
+                    <transition name="slide-fade">
+                        <div v-if="showMap" class="block-link-info">
+                            <iframe style="width: 100%; height: 400px; border-radius: 5px; border: none"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3668.936820807523!2d-45.90504178507857!3d-23.135984484895705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc48298e4b0a89%3A0x29ea8239b261cb73!2sSal%C3%A3o%20Dubai!5e0!3m2!1sen!2sbr!4v1614012988079!5m2!1sen!2sbr"
+                                height="450" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                    </transition>
+                    <a class="act-link block-link" target="_blank"
+                        href="https://www.google.com/maps/place/Sal%C3%A3o+Dubai+-+Av.+Maria+C%C3%A2ndida+Delgado,+390+-+Vila+C%C3%A2ndida,+S%C3%A3o+Jos%C3%A9+dos+Campos+-+SP,+12213-513/@-23.135984,-45.902853,16z/data=!4m2!3m1!1s0x94cc48298e4b0a89:0x29ea8239b261cb73?hl=en&gl=BR">
+                        Abrir no Google Maps <i class="fab fa-google"></i></a>
+                    <a class="act-link block-link" target="_blank"
+                        href="https://www.waze.com/live-map/directions/brasil/sao-paulo/av.-maria-candida-delgado,-390?navigate=yes&utm_campaign=default&utm_source=waze_website&utm_medium=lm_share_directions&to=place.ChIJYS5uwtZJzJQR0uyimpAIU-8">
+                        Abrir no Waze <i class="fab fa-waze"></i></a>
+                    <a class="act-link block-link" href="javascript:void(0)" :class="{'active': showInfos}"
+                        @click="showInfos = !showInfos">Covid-19 <i class="fas fa-virus"></i></a>
+                    <transition name="slide-fade">
+                        <div v-if="showInfos" class="block-link-info justify">
+                            O culto e cerimônia ocorrerão no mesmo local. Devido o momento de pandemia que estamos
+                            passando,
+                            estaremos seguindo todos os procedimentos e normas estabelecidas para a realização do
+                            evento, portanto haverá o limite de pessoas respeitando a porcentagem legal imposta,
+                            distanciamento necessário entre os assentos e disponibilização de frascos de álcool
+                            70.<br /><br />
+                            O uso de máscaras será obrigatório, sendo permitida retirada apenas para alimentação.
+                            Recomendamos que você compartilhe a mesma mesa com pessoas que
+                            façam parte do seu convívio. Garçons usarão luvas e máscaras e servirão pratos de salgados
+                            embalados e fechados em cada mesa durante o período de festa, podendo ser abertos quando ja
+                            estiverem em cima da mesa. Bebidas, bolos e doces também serão servidos por garçons mesa a
+                            mesa a fim de evitar filas e aglomerações.
+                        </div>
+                    </transition>
+                </div>
+            </div>
+
+            <div class="section-divider"></div>
+            <div class="section">
+                <i class="section-icon fab fa-youtube"></i>
+                <span class="section-title">Transmissão</span>
+                <span>
+                    Você pode acompanhar a transmissão ao vivo do nosso casamento pelo link a ser disponibilizado
+                    abaixo:
+                </span>
+                <a class="act-link block-link" href="javascript:void(0)" @click="openTransmissionUrl()">
+                    Abrir link da transmissão <i class="fas fa-external-link-alt"></i></a>
+                <a class="act-link block-link" href="javascript:void(0)" @click="copyTransmissionUrl()">
+                    Copiar link de transmissão <i class="fas fa-link"></i></a>
+            </div>
+
+            <div class="section-divider"></div>
+            <div class="section">
+                <i class="section-icon fas fa-gift"></i>
+                <span class="section-title">Lista de Presentes</span>
+                <span class="    justify">Caso você queira nos presentear segue nossa lista de presentes.</span>
+                <a class="act-link block-link"
+                    href="https://m.querodecasamento.com.br/lista-de-casamento/isa--ricardo-/" target="_blank">
+                    Abrir lista de presentes <i class="fas fa-external-link-alt"></i></a>
+            </div>
+
+            <div class="section-divider"></div>
+            <div class="section">
+                <i class="section-icon far fa-comment-dots"></i>
+                <span class="section-title">Mensagens</span>
+                <span class="info justify">Já que está aqui, deixe uma mensagem bem bonita e carinnhosa pra nós,
+                    ficaremos muito felizes em saber que você passou por aqui.
+                    <div class="person-card">
+                        <div class="field" :class="{'focus': focusField == 'mensagemNome'}" style="margin-top: 0">
+                            <label>Nome</label>
+                            <input placeholder="Digite seu nome" @focus="focusField = 'mensagemNome'"
+                                v-model="message.name" @blur="focusField = ''" />
+                        </div>
+                        <div class="field" :class="{'focus': focusField == 'mensagem'}">
+                            <label>Mensagem</label>
+                            <textarea placeholder="Digite sua mensagem" rows="5" @focus="focusField = 'mensagem'"
+                                v-model="message.message" @blur="focusField = ''"></textarea>
+                        </div>
+                    </div>
+                    <div class="persons-links">
+                        <a class="act-link block-link inline" href="javascript:void(0)" @click="sendMessage()">
+                            Enviar <i class="far fa-paper-plane"></i></a>
+                    </div>
+                </span>
+            </div>
+
+            <div class="currdate">Acessado em {{currDate.toLocaleString()}}</div>
+
+            <div class="alert" :class="{'show': alert.show, [alert.type]: true}">
+                <span style="display: block">{{alert.text}}</span>
+                <a v-if="!loading" class="act-link" href="javascript:void(0)" @click="dismissAlert()">Ok</a>
+                <div v-if="loading" style="padding-top: 4px">
+                    <img src="./three-dots.svg" style="height: 10px" />
+                </div>
+            </div>
+        </div>
+
+        <div class="presentation" :class="{'show': !invitationOpened}">
+            <div class="presentation-text">
+                Olá, {{tag || 'Convidado'}}!
+                <a v-if="!loading" class="act-link block-link" href="javascript:void(0)" @click="openInvitation()">Abrir
+                    convite!</a>
+            </div>
+        </div>
+
+        <div class="music" title="Mutar/Desmutar volume" @click="toggleSound()">
+            <i class="fas" :class="{'fa-volume-up': !musicMuted, 'fa-volume-mute': musicMuted}"></i>
+            <audio id="music" loop>
+                <source src="./music.mp3" />
+            </audio>
+        </div>
+
+    </div>
+
+    <script src="./index.js"></script>
 </body>
+
 </html>
