--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 </span>
             </div>
 
-            <div class="section-divider"></div>
-            <div class="section">
+            <div class="section-divider" v-if="showLocation"></div>
+            <div class="section" v-if="showLocation">
                 <i class="section-icon fas fa-map-marker-alt"></i>
                 <span class="section-title">Local</span>
                 <span class="info">Salão Dubai</span>
