--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <span class="section-title">Lista de Presentes</span>
                 <span class="    justify">Caso você queira nos presentear segue nossa lista de presentes.</span>
                 <a class="act-link block-link"
-                    href="https://m.querodecasamento.com.br/lista-de-casamento/isa--ricardo-/" target="_blank">
+                    href="#" target="_blank">
                     Abrir lista de presentes <i class="fas fa-external-link-alt"></i></a>
             </div>
 
