--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#FFB16F">
     <meta name="apple-mobile-web-app-status-bar-style" content="#FFB16F">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta property="og:title" content="Casamento Naama & Ana" />
+    <meta property="og:title" content="Casamento Naama & Ana Caroline" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://naamaana.github.io/casamento" />
     <meta property="og:image:type" content="image/jpeg">
@@ -21,7 +21,7 @@
         crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naama & Ana</title>
+    <title>Naama & Ana Caroline</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                 <span class="parent-name">Elaine de Oliveira Lima</span>
                 <span class="parent-name">Elizanio Vieira Lima</span>
             </div>
-            <p class="couple-names">Naama & Ana</p>
+            <p class="couple-names">Naama & Ana Caroline</p>
             <span class="info">Convidam para seu casamento a realizar-se em</span>
             <span class="info date"><span class="emphasis">13</span> de <span class="emphasis">Novembro</span> de <span
                     class="emphasis">2021</span> - <span class="emphasis">16h00</span>
